Set up CI with Azure Pipelines
[skip ci]

--- a/.ado/eshoponweb-ci-dockercompose.yml
+++ b/.ado/eshoponweb-ci-dockercompose.yml
@@ -14,11 +14,11 @@ resources:
 
 variables:
   tag: '$(Build.BuildId)'
-  resource-group: 'AZ400-EWebShop-NAME'
+  resource-group: 'rg-az400-test'
   location: 'centralus'
   templateFile: 'infra/acr.bicep'
   azureserviceconnection: 'azure subs'
-  subscriptionId: 'YOUR-SUBSCRIPTION-ID'
+  subscriptionId: 'fa9bad56-093e-485a-86f9-ca7b251fdf10'
 
 stages:
 - stage: Build
