Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,7 +6,7 @@ name: Deploy Bicep files
 variables:
   vmImageName: "ubuntu-latest"
 
-  azureServiceConnection: "Azure Resource Manager Service Connection"
+  azureServiceConnection: "Bicep"
   resourceGroupName: "Bicep"
   location: "eastus"
   templateFile: "main.bicep"
