Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ variables:
   azureServiceConnection: "Bicep"
   resourceGroupName: "Bicep"
   location: "eastus"
-  templateFile: "infra/main.bicep"
+  templateFile: "main.bicep"
 pool:
   vmImage: $(vmImageName)
 
