--- a/.github/workflows/test_bicep.yml
+++ b/.github/workflows/test_bicep.yml
@@ -19,5 +19,5 @@ jobs:
           subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
           resourceGroupName: ${{ secrets.AZURE_RG }}
           template: ./main.bicep
-          parameters: storagePrefix=stg
+          parameters: storagePrefix=stg9032817
           failOnStdErr: false
